web-infras/parser/tests/fixtures/babel/core/uncategorised/519/output.txt
[SyntaxError]: duplicate params (1,45)
1|function a() { "use strict"; (function b(t, t) { }); }
 |                                           ^
